--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hapi-post-example",
-  "version": "0.0.2",
-  "description": "HTTP POST example routes for hapi v1.2.0",
+  "version": "0.0.3",
+  "description": "HTTP POST example routes for hapi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/index.js"
   },
   "repository": "https://github.com/paullang/hapi-post-example.git",
   "author": "Paul Lang",
@@ -14,5 +14,9 @@
   },
   "dependencies": {
     "hapi": "~1.3.0"
+  },
+  "devDependencies": {
+    "specify": "~1.1.x",
+    "request": "~2.21.x"
   }
 }
