--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-post-example",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "HTTP POST example routes for hapi",
   "main": "index.js",
   "scripts": {
@@ -13,10 +13,11 @@
     "node": ">=0.10.5"
   },
   "dependencies": {
-    "hapi": "~1.7.0"
+    "hapi": "4.0.x",
+    "joi": "3.1.x"
   },
   "devDependencies": {
-    "specify": "~1.1.x",
-    "request": "~2.21.x"
+    "specify": "1.1.x",
+    "request": "2.21.x"
   }
 }
