--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-post-example",
-  "version": "0.0.8",
+  "version": "12.1.0",
   "description": "HTTP POST example routes for hapi",
   "main": "index.js",
   "scripts": {
@@ -8,16 +8,17 @@
   },
   "repository": "https://github.com/paullang/hapi-post-example.git",
   "author": "Paul Lang",
-  "license": "BSD",
+  "license": "BSD-2-Clause",
   "engines": {
-    "node": ">=0.10.32"
+    "node": ">=4.0.0"
   },
   "dependencies": {
-    "hapi": "8.0.x",
-    "joi": "5.0.x"
+    "hapi": "12.1.0",
+    "inert": "3.2.0",
+    "joi": "7.2.2"
   },
   "devDependencies": {
-    "specify": "1.1.x",
-    "request": "2.21.x"
+    "specify": "1.3.0",
+    "request": "2.67.0"
   }
 }
